--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <ul>
  	<li><div id="orange"></div></li>
  	<li><div id="white"><h1><div id="typed-strings">
-    <h1>Happy Republic Day</h1>
+    <h1>HAPPY REPUBLIC DAY</h1>
     <h1>JAI HIND</h1>
 </div>
 <span id="typed"></span></h1></div></li>
